--- a/app/views/visitors/index.html.haml
+++ b/app/views/visitors/index.html.haml
@@ -1,179 +1,220 @@
-/ Page Content
-.container-fluid
-  .row
-    .col-md-12
-      .row.carousel-holder
-        .col-md-12
-          #carousel-example-generic.carousel.slide{"data-ride" => "carousel"}
-            %ol.carousel-indicators
-              %li.active{"data-slide-to" => "0", "data-target" => "#carousel-example-generic"}
-              %li{"data-slide-to" => "1", "data-target" => "#carousel-example-generic"}
-              %li{"data-slide-to" => "2", "data-target" => "#carousel-example-generic"}
-            .carousel-inner
-              .item.active
-                %img.slide-image{:alt => "", :src => "http://placehold.it/800x300"}/
-              .item
-                %img.slide-image{:alt => "", :src => "http://placehold.it/800x300"}/
-              .item
-                %img.slide-image{:alt => "", :src => "http://placehold.it/800x300"}/
-            %a.left.carousel-control{"data-slide" => "prev", :href => "#carousel-example-generic"}
-              %span.glyphicon.glyphicon-chevron-left
-            %a.right.carousel-control{"data-slide" => "next", :href => "#carousel-example-generic"}
-              %span.glyphicon.glyphicon-chevron-right
-      .row
-        .col-sm4.col-lg-4.col-md-4
-          .thumbnail
-            %img{:alt => "", :src => "http://placehold.it/320x150"}/
-            .caption
-              %h4.pull-right $24.99
-              %h4
-                %a{:href => "#"} First Product
-              %p
-                See more snippets like this online store item at
-                = succeed "." do
-                  %a{:href => "http://www.bootsnipp.com", :target => "_blank"} Bootsnipp - http://bootsnipp.com
-            .ratings
-              %p.pull-right 15 reviews
-              %p
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-        .col-sm4.col-lg-4.col-md-4
-          .thumbnail
-            %img{:alt => "", :src => "http://placehold.it/320x150"}/
-            .caption
-              %h4.pull-right $64.99
-              %h4
-                %a{:href => "#"} Second Product
-              %p This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            .ratings
-              %p.pull-right 12 reviews
-              %p
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star-empty
-        .col-sm4.col-lg-4.col-md-4
-          .thumbnail
-            %img{:alt => "", :src => "http://placehold.it/320x150"}/
-            .caption
-              %h4.pull-right $74.99
-              %h4
-                %a{:href => "#"} Third Product
-              %p This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            .ratings
-              %p.pull-right 31 reviews
-              %p
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star-empty
-        .col-sm4.col-lg-4.col-md-4
-          .thumbnail
-            %img{:alt => "", :src => "http://placehold.it/320x150"}/
-            .caption
-              %h4.pull-right $84.99
-              %h4
-                %a{:href => "#"} Fourth Product
-              %p This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            .ratings
-              %p.pull-right 6 reviews
-              %p
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star-empty
-                %span.glyphicon.glyphicon-star-empty
-        .col-sm4.col-lg-4.col-md-4
-          .thumbnail
-            %img{:alt => "", :src => "http://placehold.it/320x150"}/
-            .caption
-              %h4.pull-right $94.99
-              %h4
-                %a{:href => "#"} Fifth Product
-              %p This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            .ratings
-              %p.pull-right 18 reviews
-              %p
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star-empty
-        .col-sm4.col-lg-4.col-md-4
-          .thumbnail
-            %img{:alt => "", :src => "http://placehold.it/320x150"}/
-            .caption
-              %h4.pull-right $94.99
-              %h4
-                %a{:href => "#"} Sixth Product
-              %p This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            .ratings
-              %p.pull-right 18 reviews
-              %p
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star-empty
-        .col-sm4.col-lg-4.col-md-4
-          .thumbnail
-            %img{:alt => "", :src => "http://placehold.it/320x150"}/
-            .caption
-              %h4.pull-right $94.99
-              %h4
-                %a{:href => "#"} Seventh Product
-              %p This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            .ratings
-              %p.pull-right 18 reviews
-              %p
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star-empty
-        .col-sm4.col-lg-4.col-md-4
-          .thumbnail
-            %img{:alt => "", :src => "http://placehold.it/320x150"}/
-            .caption
-              %h4.pull-right $94.99
-              %h4
-                %a{:href => "#"} Eigth Product
-              %p This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            .ratings
-              %p.pull-right 18 reviews
-              %p
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star-empty
-        .col-sm4.col-lg-4.col-md-4
-          .thumbnail
-            %img{:alt => "", :src => "http://placehold.it/320x150"}/
-            .caption
-              %h4.pull-right $94.99
-              %h4
-                %a{:href => "#"} Ninth Product
-              %p This is a short description. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            .ratings
-              %p.pull-right 18 reviews
-              %p
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star
-                %span.glyphicon.glyphicon-star-empty
-/ /.container
-.container
-  %hr/
-  / Footer
-  %footer
+%body
+  %header#myCarousel.carousel.slide
+    / Indicators
+    %ol.carousel-indicators
+      %li.active{"data-slide-to" => "0", "data-target" => "#myCarousel"}
+      %li{"data-slide-to" => "1", "data-target" => "#myCarousel"}
+      %li{"data-slide-to" => "2", "data-target" => "#myCarousel"}
+    / Wrapper for slides
+    .carousel-inner
+      .item.active
+        .fill{:style => "background-image:url('http://placehold.it/1900x1080&text=Slide One');"}
+        .carousel-caption
+          %h2 Caption 1
+      .item
+        .fill{:style => "background-image:url('http://placehold.it/1900x1080&text=Slide Two');"}
+        .carousel-caption
+          %h2 Caption 2
+      .item
+        .fill{:style => "background-image:url('http://placehold.it/1900x1080&text=Slide Three');"}
+        .carousel-caption
+          %h2 Caption 3
+    / Controls
+    %a.left.carousel-control{"data-slide" => "prev", :href => "#myCarousel"}
+      %span.icon-prev
+    %a.right.carousel-control{"data-slide" => "next", :href => "#myCarousel"}
+      %span.icon-next
+  / Page Content
+  .container-fluid
+    / Marketing Icons Section
     .row
       .col-lg-12
-        %p Copyright © Demo 2016
-/ /.container
+        %h1.page-header
+          Elite Concierge Curated Activities
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-check
+              Bootstrap v3.2.0
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-gift
+              Free &amp; Open
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+      .col-md-3
+        .panel.panel-default
+          .panel-heading
+            %h4
+              %i.fa.fa-fw.fa-compass
+              Easy to Use
+          .panel-body
+            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
+            %a.btn.btn-default{:href => "#"} Learn More
+  / Script to Activate the Carousel
+  :javascript
+    $(document).on('ready', function () {
+      $('.carousel').carousel({
+          interval: 8000 //changes the speed
+      })
+    });
