Additional theming changes

--- a/app/views/visitors/index.html.haml
+++ b/app/views/visitors/index.html.haml
@@ -30,7 +30,7 @@
     .row
       .col-lg-12
         %h1.page-header
-          Elite Concierge Curated Activities
+          Hawaii Activities
       .col-md-3
         .panel.panel-default
           .panel-heading
