--- a/app/views/visitors/index.html.haml
+++ b/app/views/visitors/index.html.haml
@@ -1,3 +1,16 @@
+- card_content = [['Swim with sharks', 'We find the tamest ones. Gaurantee not to bite']]
+- card_content << ['Whale watching', 'They make a big splash']
+- card_content << ['Parasailing', 'It\'s sure to give you a lift']
+- card_content << ['Surf Lessons', 'Glide on top the salty blue waters of North Shore']
+- card_content << ['Snokel Adventure', 'Dive into the turquoise waves of Hanauma Bay']
+- card_content << ['Stand Up Paddle', 'Coast along Oahu\'s calm and crystal clear waters']
+- card_content << ['Ultimate adventure', 'Surf, swim, hike and sightseeing.']
+- card_content << ['Pearl Harbor Tour', 'See something. Learn something. Famous landmark']
+- card_content << ['Diamond Head Run', 'Beat the guide to the top.']
+- card_content << ['Sunrise yoga', 'Rise to a Hawaiian sunrise.']
+- card_content << ['Chinatown tour', 'Eat you way through Chinatown and learn some.']
+- card_content << ['Kualoa Ranch', 'Glimpse into Oahu\'s best kept secrets.']
+
 %body
   %header#myCarousel.carousel.slide
     / Indicators
@@ -31,186 +44,10 @@
       .col-lg-12
         %h1.page-header
           Hawaii Activities
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-check
-              Bootstrap v3.2.0
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-gift
-              Free &amp; Open
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
-      .col-md-3
-        .panel.panel-default
-          .panel-heading
-            %h4
-              %i.fa.fa-fw.fa-compass
-              Easy to Use
-          .panel-body
-            %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?
-            %a.btn.btn-default{:href => "#"} Learn More
+      - card_content.each_with_index do |title_content, index|
+        - title, content = title_content
+        = render 'activity_card', title: title, content: content, card_number: index
+        = render 'activity_modal', title: title, content: content, card_number: index
   / Script to Activate the Carousel
   :javascript
     $(document).on('ready', function () {
