--- a/app/assets/stylesheets/modern-business.css
+++ b/app/assets/stylesheets/modern-business.css
@@ -12,15 +12,7 @@ body {
 }
 
 body {
-    padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-}
-
-.panel-default .panel-heading {
-  background-color: #3dc1c3;
-}
-
-.panel-default h4 {
-  color: #fff;
+    /* padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */ 
 }
 
 .page-header {
