--- a/app/views/visitors/index.html.haml
+++ b/app/views/visitors/index.html.haml
@@ -12,31 +12,7 @@
 - card_content << ['Kualoa Ranch', 'Glimpse into Oahu\'s best kept secrets.']
 
 %body
-  %header#myCarousel.carousel.slide
-    / Indicators
-    %ol.carousel-indicators
-      %li.active{"data-slide-to" => "0", "data-target" => "#myCarousel"}
-      %li{"data-slide-to" => "1", "data-target" => "#myCarousel"}
-      %li{"data-slide-to" => "2", "data-target" => "#myCarousel"}
-    / Wrapper for slides
-    .carousel-inner
-      .item.active
-        .fill{:style => "background-image:url('http://placehold.it/1900x1080&text=Slide One');"}
-        .carousel-caption
-          %h2 Caption 1
-      .item
-        .fill{:style => "background-image:url('http://placehold.it/1900x1080&text=Slide Two');"}
-        .carousel-caption
-          %h2 Caption 2
-      .item
-        .fill{:style => "background-image:url('http://placehold.it/1900x1080&text=Slide Three');"}
-        .carousel-caption
-          %h2 Caption 3
-    / Controls
-    %a.left.carousel-control{"data-slide" => "prev", :href => "#myCarousel"}
-      %span.icon-prev
-    %a.right.carousel-control{"data-slide" => "next", :href => "#myCarousel"}
-      %span.icon-next
+  = render 'carousel'
   / Page Content
   .container-fluid
     / Marketing Icons Section
