--- a/app/views/visitors/_activity_modal.html.haml
+++ b/app/views/visitors/_activity_modal.html.haml
@@ -1,10 +1,12 @@
 - card_number ||= 1
+- font ||= 'fa-check'
 
 .modal.fade{ id: "modal_#{card_number}", tabindex: '-1', role: "dialog", aria: { labelledby: "label_#{card_number}", hidden: true } }
   .modal-dialog.modal-lg{ role: 'document' }
     .modal-content
       .modal-header
         %h4.modal-title{id: "label_#{card_number}"}
+          %i.fa.fa-fw{class: "#{icon}"}
           = title
       .modal-body
         = content
